--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Welcome to the chat app</h1>      
+    <h1>Welcome to the chat app</h1>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+
+      socket.on('connect', () => {
+        console.log('Connected to server');
+      });
+
+      socket.on('disconnect', () => {
+        console.log('Disconnected from server');
+      });
+    </script>
   </body>
 
 </html>
