--- a/public/chat.html
+++ b/public/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Babble | JabberApp</title>
-    <meta name="viewport" content="width=device-width, initial-sacle=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="chat">
@@ -55,9 +55,10 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.1.0.min.js"></script>
-    <script src="/js/chat.js"></script>
     <script src="/js/libs/mustache.js"></script>
     <script src="/js/libs/moment.js"></script>
+    <script src="/js/libs/deparam.js"></script>
+    <script src="/js/chat.js"></script>
   </body>
 
 </html>
