--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
     <div class="centered-form__form">
       <form action="/chat.html">
         <div class="form-field">
-          <h3>Join a Babble</h3>
+          <h3>Join a Jabbler:</h3>
         </div>
         <div class="form-field">
-          <label>Nickname</label>
+          <label>Nickname:</label>
           <input type="text" placeholder="johnDoe" name="name" autofocus />
         </div>
         <div class="form-field">
-          <label>Room Name</label>
-          <input type="text" placeholder="babbleRoom" name="room" autofocus />
+          <label>Room Name:</label>
+          <input type="text" placeholder="jabberRoom" name="room" autofocus />
         </div>
         <div class="form-field">
           <button>Join</button>
