fixes the target of the location anchor

--- a/public/chat.html
+++ b/public/chat.html
@@ -48,7 +48,7 @@
           <span>{{createdAt}}</span>
         </div>
         <div class="message__body">
-          <p><a href="{{url}}">My Current Location</a></p>
+          <p><a href="{{url}}" target="blank">My Current Location</a></p>
         </div>
       </li>
     </script>
