--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="centered-form__form">
       <form action="/chat.html">
         <div class="form-field">
-          <h3>Join a Jabbler:</h3>
+          <h3>Join a Jabber:</h3>
         </div>
         <div class="form-field">
           <label>Nickname:</label>
